--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/CreditCardsApp
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
